# apertium-dixtools

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.orig  README  TEST-dictools.DixtoolsTestSuite.xml  add-gender  apertium-crossdics  apertium-dictools  apertium-dixtools  assign-paradigm  authors  autogen.sh  build-before-profiler.xml  build.xml  configure.ac  cross-dics  dictools  format  make_actual_output_expected.sh  merge-bil  merge-morph  pom.xml  readme  reverse-bil  sort  x.dix
dix/: apertium-fr-oc.fr-crossed.dix  apertium-fr-oc.fr-oc-crossed.dix  apertium-fr-oc.oc-crossed.dix
examples/: apertium-ca-pt.ca-crossed.dix  apertium-ca-pt.ca-pt-crossed.dix  apertium-ca-pt.pt-crossed.dix
man/: apertium-crossdics.1  apertium-dixtools.1
nbproject/: build-impl.xml  coverage.properties  genfiles.properties  project.properties  project.xml
nbproject/configs/: Optimization.properties
precompiled_binary/: README  apertium-dixtools-0.90.tgz
regression_test_data/columnar/: mapping-en-es.xml  sample.tsv
regression_test_data/crossdict/: do_test.sh
regression_test_data/dic-reader/: do_test.sh  expected_output.txt
regression_test_data/dix2tiny/: do_test.sh
regression_test_data/dix2trie/: do_test.sh  expected_output.txt
regression_test_data/equiv-paradigms/: expected_output.dix
regression_test_data/fix/: expected_output.dix
regression_test_data/grep/: expected_output.dix
regression_test_data/kind_of_test/: command_line.sh
regression_test_data/merge-morph/: do_test.sh  expected_output.dix
regression_test_data/para_config/: mapping-en-es.xml
regression_test_data/reverse-bil/: do_test.sh  expected_output.dix  reverse-bil.err
regression_test_data/sort/: do_test.sh
regression_test_data/speling/: expected-output.dix  expected-pruned-output.dix  speling-prune-test  speling-test  speling_out.dix
regression_test_data/stemcheck/: expected_output.txt
resources/: ling-resources.dtd  ling-resources.xml
schemas/: cross-model-test.xml  cross-model.xml  crossmodel.dtd  example-es-ca-en.xml
src/: HowTo.java  Makefile.am  ProcessDics.java
src/dictools/: AbstractDictTool.java  AddRestrictionsToSL.java  AutoconcordBidix.java  AutorestrictBidix.java  DicConsistent.java  DicCross.java  DicElementsList.java  DicEquivPar.java  DicFilter.java  DicFindEquivPar.java  DicFix.java  DicFormat.java  DicGather.java  DicGrep.java  DicList.java  DicMerge.java  DicProfiler.java  DicReader.java  DicReverse.java  DicSort.java  DicStemCheck.java  DicTools.java  DictionaryReader.java  Dix2CC.java  Dix2MDix.java  Dix2Tiny.java  Dix2suffixtree.java  ProcessDics.java  SdefsReader.java  ShortenRestrictions.java  SuffixList.java  TinyFilter.java  XMLReader.java  unused__DicEquivPar.java
src/lingres/: LingResources.java  LingResourcesReader.java  Resource.java  ResourceSet.java
src/misc/: AddGender.java  AssignParadigm.java  DicFormatE1Line.java  GetBilOmegawiki.java  GetTranslation.java  Kompletigu.java  Misc.java  Optimization.java  RemovePardefs.java  Svensk.java
stem-checker/: build.xml
stem-checker/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
test/: autorestrict-slr-incorrect-output.dix  autorestrict-slr-sample.dix  correct_output_DicFormat-eo-en.xml  correct_output_DicFormat.xml  correct_output_DicFormatE1Line-eo-en.xml  correct_output_DicFormatE1Line.xml  correct_output_DicFormatE1LineAligned-eo-en.xml  correct_output_aligned20_80_also_pardefs.xml  findequivalent-basic.dix  hitparade-en.txt  hitparade-eo.txt  missing_restrictions.eo-en.dix  sample.eo-en.dix  sample.metadix  sample2.metadix  stem-checker-test.dix
test/dictools/: FixTest.java  (+22 more)
tiny-examples/: filter-default.xml
(+266 files in other folders)
